modification du footer

--- a/cards.html
+++ b/cards.html
@@ -51,9 +51,10 @@
         </div>
     </main>
 
-    <footer class="flex h-16 sm:h-20 md:h-24 lg:h-[100px] items-center mt-8 sm:mt-12 md:mt-16 lg:mt-[80px] justify-center bg-[#92140C]">
+     <footer class=" sticky top-[100vh]  flex h-16 sm:h-20 md:h-24 lg:h-[100px] items-center mt-8 sm:mt-12 md:mt-16 lg:mt-[80px] justify-center bg-[#92140C]">
         <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-[Ingrid_Darling]"><b>Karta</b></h1>
     </footer>
+
 
     <script src="js/script.js"></script>
 </body>
